Testing commit: corrected the word in comments

--- a/OPA/Web.config
+++ b/OPA/Web.config
@@ -86,7 +86,7 @@
     </httpErrors>
   </system.webServer>
 
-  <!-- Set configuration foe assembly binding and garbage collection -->
+  <!-- Set configuration for assembly binding and garbage collection -->
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
