--- a/OPA/OPA.csproj
+++ b/OPA/OPA.csproj
@@ -657,6 +657,7 @@
     <Content Include="Views\Financial\Pledges.cshtml" />
     <Content Include="Views\Financial\Donations.cshtml" />
     <Content Include="Views\Home\ValueSets.cshtml" />
+    <Content Include="Views\Home\CreateValue.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
