Separated the SMTP from the owner email address

--- a/OPA/Web.config
+++ b/OPA/Web.config
@@ -42,16 +42,16 @@
 
     <add key="org:Name" value="Sts. Kosmas &amp; Damianos" />
     <add key="app:Name" value="Online Parish Administration" />
-    <add key="url:DonorBox" value="" />
+    <add key="app:Owner" value="" />
 
-    <add key="admin:Name" value="OPA Support" />
-    <add key="admin:Email" value="" />
-
+    <add key="smtp:Name" value="OPA Support" />
+    <add key="smtp:Email" value="" />
     <add key="smtp:Host" value="" />
     <add key="smtp:Port" value="" />
     <add key="smtp:Account" value="" />
     <add key="smtp:Password" value="" />
 
+    <add key="url:DonorBox" value="" />
     <add key="key:Square" value="" />
     <add key="key:Stripe" value="" />
 
