Overhauled the donation platform / electronic payment code to make these integrations optional.  If no values are set in the config file then these functions will remain inactive.

--- a/OPA/Web.config
+++ b/OPA/Web.config
@@ -49,11 +49,13 @@
     <add key="smtp:Host" value="" />
     <add key="smtp:Port" value="" />
     <add key="smtp:Account" value="" />
-    <add key="smtp:Password" value="" />
+    <add key="smtp:Password" value=" />
 
-    <add key="url:DonorBox" value="" />
-    <add key="key:Square" value="" />
+    <add key="url:DonationForm" value="" />
+    <add key="url:DonationOrgAcct" value="" />
+    <add key="url:DonationUserAcct" value="" />
     <add key="key:Stripe" value="" />
+    <add key="key:Square" value="" />
 
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
