Added the ability to assign a person record to a user record.

--- a/OPA/Web.config
+++ b/OPA/Web.config
@@ -49,7 +49,7 @@
     <add key="smtp:Host" value="" />
     <add key="smtp:Port" value="" />
     <add key="smtp:Account" value="" />
-    <add key="smtp:Password" value=" />
+    <add key="smtp:Password" value="" />
 
     <add key="url:DonationForm" value="" />
     <add key="url:DonationOrgAcct" value="" />
