--- a/OPA.SquareExtract/App.config
+++ b/OPA.SquareExtract/App.config
@@ -3,7 +3,7 @@
 
   <!-- Specify custom application settings -->
   <appSettings>
-    <add key="key:Square" value="sq0atp-HDUbLVOPu_R-pKmnJ5rOuw" />
+    <add key="key:Square" value="" />
   </appSettings>
 
   <startup>
